--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <p id = "result"></p>
 
-        <button id = "buttonClick" onclick = "exponentialPopulationGrowth()"> Touch me </button>
+        <button id = "buttonClick" onclick = "exponentialPopulationGrowth()"> Click me </button>
 
         <script src = "script.js"></script>
     </body>
